# tauri-fasthtml

./: .gitignore  .sesskey  README.md  copilot-session-4ca1558d-4a8b-409c-9359-e466ce20e99e.md  copilot-session-5e205391-9b3b-49ac-9f97-31d572e32832.md  copilot-session-8db37a4b-d4b3-4093-8906-f1124b4e8196.md  copilot-session-9364db69-f25b-442a-837c-ec4cb227025d.md  copilot-session-9a6dbfe5-4234-4fbe-af0f-a59477c82230.md  copilot-session-cb9ba9ef-277a-4447-816f-31ba0cf4fe3e.md  copilot-session-ed7c8b90-16ac-4573-90b4-375e60f41323.md  errors.txt  getting-md-from-json-from-vs-code-chat-for-mac-build.chat.md  mac-build.chat.json  mac-build.chat.md  package-lock.json  package.json  tauri-fasthtml.chat.md  window-state-persistence.chat.json  window-state-persistence.chat.md
.github/: copilot-instructions.md
frontend/: index.html
python/: playwright_mcp_server.py  requirements.txt  server.py  theme_toggle.py
scripts/: download-model.py  setup-python.py
src-tauri/: .sesskey  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: mac-build.chat.json  main.rs
